--- a/android-java/settings.gradle
+++ b/android-java/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "Knowledges"
 include ':app'
 include ':android-life-cycles'
+include ':android_recyclerview'
