--- a/android-java/android_recyclerview/build.gradle
+++ b/android-java/android_recyclerview/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.3.0-beta01"
 
+    //androidX
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
