--- a/myInstagram/app/src/main/AndroidManifest.xml
+++ b/myInstagram/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    package="com.nbgsoftware.myinstagram">
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.MyInstagram"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.nbgsoftware.myinstagram.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
