--- a/eWallet/app/src/main/AndroidManifest.xml
+++ b/eWallet/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:exported="true" />
 
         <activity
-            android:name=".view.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:exported="true">
 
             <intent-filter>
@@ -29,26 +29,22 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.SettingAct"/>
+        <activity android:name=".ui.SettingAct"/>
 
-        <activity android:name=".view.GenerateAccountAct"/>
+        <activity android:name=".ui.GenerateAccountAct"/>
 
-        <activity android:name=".view.WalletManagerAct"/>
+        <activity android:name=".ui.WalletManagerAct"/>
 
         <activity android:name=".ScannerQRCodeAct"/>
 
-        <activity android:name=".view.login.LoginActivity"/>
+        <activity android:name=".ui.login.LoginActivity"/>
 
-        <activity android:name=".view.pincode.PinCodeAct"/>
-
-
+        <activity android:name=".ui.pincode.PinCodeAct"/>
 
         <activity
-            android:name=".view.onboarding.OnBoardingActivity"
+            android:name=".ui.onboarding.OnBoardingActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-
     </application>
-
 </manifest>
