--- a/eWallet/local.properties
+++ b/eWallet/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 29 23:43:59 ICT 2022
-sdk.dir=D\:\\Android-studio\\SDK-Android
+#Mon Aug 29 14:42:54 ICT 2022
+sdk.dir=F\:\\SETUP\\Android\\Sdk
