call-02: custom toolbar

--- a/vnCalling/app/build.gradle
+++ b/vnCalling/app/build.gradle
@@ -36,7 +36,7 @@ android {
 }
 
 dependencies {
-
+    //navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
 
