--- a/vnCalling/app/build.gradle
+++ b/vnCalling/app/build.gradle
@@ -36,6 +36,23 @@ android {
 }
 
 dependencies {
+    //MultiDex
+    implementation "androidx.multidex:multidex:2.0.1"
+
+    //indicator3
+    implementation 'me.relex:circleindicator:2.1.6'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+
+    //rx
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
     //navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
