--- a/vnCalling/app/build.gradle
+++ b/vnCalling/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -69,6 +70,10 @@ dependencies {
 
     //material design 2
     implementation 'com.google.android.material:material:1.6.1'
+
+    //room
+    implementation "androidx.room:room-ktx:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
 
     //androidX
     implementation 'androidx.core:core-ktx:1.8.0'
