--- a/vnCalling/app/src/main/AndroidManifest.xml
+++ b/vnCalling/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.android.vncalling">
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
