--- a/vnCalling/app/src/main/AndroidManifest.xml
+++ b/vnCalling/app/src/main/AndroidManifest.xml
@@ -3,6 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.vncalling">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -36,5 +47,14 @@
         <activity
             android:name=".ui.features.container.MainActivity"
             android:screenOrientation="fullSensor" />
+
+        <service
+            android:name=".services.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 </manifest>
