--- a/vnCalling/app/src/main/AndroidManifest.xml
+++ b/vnCalling/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.android.vncalling">
 
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -44,9 +45,24 @@
         <activity
             android:name=".ui.features.login.LoginActivity"
             android:screenOrientation="fullSensor" />
+
         <activity
             android:name=".ui.features.container.MainActivity"
             android:screenOrientation="fullSensor" />
+
+        <activity
+            android:name=".ui.features.calling_screen.OutgoingCallActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor"
+            android:showOnLockScreen="true"
+            android:showWhenLocked="true" />
+
+        <activity
+            android:name=".ui.features.calling_screen.IncomingCallActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor"
+            android:showOnLockScreen="true"
+            android:showWhenLocked="true" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
