--- a/vnHealthyCare/local.properties
+++ b/vnHealthyCare/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 30 00:15:31 ICT 2022
-sdk.dir=D\:\\Android-studio\\SDK-Android
+#Wed Nov 09 16:49:52 ICT 2022
+sdk.dir=F\:\\SETUP\\Android\\Sdk
