ML-kit: TextRecognitionFragment

--- a/android-knowledges/google-services/machine-learning-kit/app/build.gradle
+++ b/android-knowledges/google-services/machine-learning-kit/app/build.gradle
@@ -17,7 +17,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding = true
     }
 
@@ -37,14 +37,20 @@ android {
 }
 
 dependencies {
+    //mlkit-text-recognition
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.2'
+
     //navigation component
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
 
+    //android sdk libraries
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // unitTest
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
