--- a/android-knowledges/google-services/machine-learning-kit/app/src/main/AndroidManifest.xml
+++ b/android-knowledges/google-services/machine-learning-kit/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="ocr" />
     </application>
 
 </manifest>
