--- a/android-knowledges/google-services/machine-learning-kit/app/src/main/AndroidManifest.xml
+++ b/android-knowledges/google-services/machine-learning-kit/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
             android:value="barcode" >
             <!-- To use multiple models: android:value="barcode,model2,model3" -->
         </meta-data>
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="ica">
+            <!-- To use multiple models: android:value="ica,model2,model3" -->
+        </meta-data>
+
     </application>
 
 </manifest>
