--- a/android-knowledges/google-services/machine-learning-kit/app/build.gradle
+++ b/android-knowledges/google-services/machine-learning-kit/app/build.gradle
@@ -37,6 +37,10 @@ android {
 }
 
 dependencies {
+    //mlkit-face-detection
+    implementation 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
+    implementation 'com.google.mlkit:face-detection:16.1.5'
+
     //mlkit-text-recognition
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.2'
 
