--- a/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/AndroidManifest.xml
+++ b/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.AndroidCommonUseCases"
         tools:targetApi="31">
         <activity
-            android:name=".main.MainActivity"
+            android:name=".container.ContainerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
