notes app: database and utils

--- a/AndroidAppsForDevs/Notes/app/src/main/AndroidManifest.xml
+++ b/AndroidAppsForDevs/Notes/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.notes">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,21 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesClone">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".Controller.NewNote"
             android:exported="true"
-            android:screenOrientation="fullSensor"
-            android:windowSoftInputMode="stateHidden">
+            android:parentActivityName=".Controller.MainActivity" />
+        <activity
+            android:name=".Controller.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".activities.CreateNoteActivity"
-            android:screenOrientation="fullSensor"
-            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
