--- a/MultiApplicationProject/settings.gradle
+++ b/MultiApplicationProject/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "MultiApplicationProject"
+rootProject.name = "MultiApplication"
 include ':app'
