MultiApplication: media app

--- a/MultiApplicationProject/app/src/main/AndroidManifest.xml
+++ b/MultiApplicationProject/app/src/main/AndroidManifest.xml
@@ -11,6 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MultiApplication"
-        tools:targetApi="31" />
+        tools:targetApi="31">
+
+        <activity android:name=".container.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
