--- a/MultiApplicationProject/app/src/main/AndroidManifest.xml
+++ b/MultiApplicationProject/app/src/main/AndroidManifest.xml
@@ -6,20 +6,28 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.MultiApplication"
         tools:targetApi="31">
 
-        <activity android:name=".container.MainActivity"
+        <activity
+            android:name=".container.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".container.MainActivity" />
+
+        <activity android:name=".apps.calculator.CalculatorActivity" />
+
+        <activity android:name=".apps.media.ui.main.MediaActivity" />
+
     </application>
 
 </manifest>
