--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "AndroidOpenSourceProjects"
 include ':app'
 include ':Apps'
+include ':Tutorials'
