Apps: init appFakeCall

--- a/Apps/build.gradle
+++ b/Apps/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,6 +38,17 @@ android {
 }
 
 dependencies {
+    // load images
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //Room database
+    implementation("androidx.room:room-runtime:2.5.1")
+    implementation "androidx.room:room-ktx:2.5.1"
+    kapt("androidx.room:room-compiler:2.5.1")
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
