--- a/Apps/build.gradle
+++ b/Apps/build.gradle
@@ -39,6 +39,9 @@ android {
 }
 
 dependencies {
+    // recording screen
+    implementation 'com.github.HBiSoft:HBRecorder:3.0.1'
+
     // load images
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
@@ -61,4 +64,12 @@ dependencies {
     //navigation component
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+
+    implementation 'androidx.camera:camera-core:1.3.0-alpha06'
+    // CameraX core library using camera2 implementation
+    implementation 'androidx.camera:camera-camera2:1.3.0-alpha06'
+    // CameraX Lifecycle Library
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha06'
+    // CameraX View class
+    implementation 'androidx.camera:camera-view:1.3.0-alpha06'
 }
