--- a/Remote/src/main/AndroidManifest.xml
+++ b/Remote/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
-        android:name=".MainApplication"
+        android:name=".commons.main.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,9 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidOpenSourceProjects">
         <activity
-            android:name=".MainActivity"
+            android:name=".brands.sony.container.SonyActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.AndroidOpenSourceProjects.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
