Apps/waStickers: Sticker Preview Screen

--- a/Apps/src/main/AndroidManifest.xml
+++ b/Apps/src/main/AndroidManifest.xml
@@ -54,6 +54,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".apps.appWAStickers.core.StickerContentProvider"
+            android:authorities="${contentProviderAuthority}"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.whatsapp.sticker.READ" />
     </application>
 
+    <!-- to be able to query the whitelist status in WhatsApp
+            https://developer.android.com/training/basics/intents/package-visibility#package-name -->
+    <queries>
+        <package android:name="com.whatsapp" />
+        <package android:name="com.whatsapp.w4b" />
+    </queries>
 </manifest>
