--- a/Remote/src/main/AndroidManifest.xml
+++ b/Remote/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".commons.main.MainApplication"
+        android:name=".RemoteApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,15 +14,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidOpenSourceProjects">
         <activity
-            android:name=".brands.sony.container.SonyActivity"
+            android:name=".commons.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AndroidOpenSourceProjects.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".brands.lg.LGActivity"
+            android:screenOrientation="fullSensor" />
+
+        <activity
+            android:name=".brands.sony.container.SonyActivity"
+            android:screenOrientation="fullSensor" />
+
+        <activity
+            android:name=".brands.samsung.SamsungActivity"
+            android:screenOrientation="fullSensor" />
+
+        <activity
+            android:name=".brands.panasonic.PanasonicActivity"
+            android:screenOrientation="fullSensor" />
     </application>
 
 </manifest>
