--- a/tutorials/build.gradle
+++ b/tutorials/build.gradle
@@ -33,12 +33,18 @@ android {
 }
 
 dependencies {
+    // navigation component+
+    implementation "androidx.navigation:navigation-fragment:2.5.3"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // define any required OkHttp artifacts without version
     implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
+
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     //rxjava3
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
