--- a/tutorials/src/main/AndroidManifest.xml
+++ b/tutorials/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidOpenSourceProjects">
         <activity
-            android:name=".container.MainActivity"
+            android:name=".commons.container.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
