develop/machineLearning init project

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ rootProject.name = "AndroidOpenSourceProjects"
 include ':Apps'
 include ':Tutorials'
 include ':Remote'
+include ':MachineLearning'
