develop/textRecognition: add gg services

--- a/MachineLearning/src/main/AndroidManifest.xml
+++ b/MachineLearning/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!--permission for internet-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <application
         android:name=".MachineLearningApp"
         android:allowBackup="true"
@@ -28,5 +36,9 @@
         <activity
             android:name=".naturalLanguageApis.commons.NaturalLanguageApisActivity"
             android:screenOrientation="fullSensor" />
+
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="ocr" />
     </application>
 </manifest>
