--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
+        //noinspection GradleDependency
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
         classpath 'com.google.gms:google-services:4.3.15'
     }
@@ -14,6 +15,7 @@ plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
 
 task clean(type: Delete) {
