DataStorageModuleApp: FirebaseStorages init

--- a/DataStorage/build.gradle
+++ b/DataStorage/build.gradle
@@ -31,16 +31,18 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
-    // Declare the dependency for the Cloud Firestore library
-    // When using the BoM, you don't specify versions in Firebase library dependencies
+    // cloudFireStore
     implementation("com.google.firebase:firebase-firestore-ktx")
-    // TODO: Add the dependencies for Firebase products you want to use
-    // When using the BoM, don't specify versions in Firebase dependencies
+    // analytics firebase
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //navigation component
