--- a/DataStorage/src/main/AndroidManifest.xml
+++ b/DataStorage/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".DataStoragesApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -9,11 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidOpenSourceProjects">
         <activity
-            android:name=".commons.MainActivity"
+            android:name=".commons.ui.container.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
