--- a/DataStorage/build.gradle
+++ b/DataStorage/build.gradle
@@ -40,8 +40,10 @@ android {
 dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
-    // cloudFireStore
+    // cloudFireStore --> fields management
     implementation("com.google.firebase:firebase-firestore-ktx")
+    // storage firebase --> files storage
+    implementation("com.google.firebase:firebase-storage-ktx")
     // analytics firebase
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
