--- a/tutorials/src/main/AndroidManifest.xml
+++ b/tutorials/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <receiver android:name=".broadcastReceiver.network.NetworkBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
